--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -503,6 +503,16 @@ body{
     height: 400px;
 }
 
+.about-me-ctn::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .about-me-ctn {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 .gif-props{
     text-align: center; 
     display: flex;
@@ -727,8 +737,9 @@ span-but{
 
 .button:hover {
     /* color: blue; */
-    box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.507);
-    border-radius: 7px;
+    /* box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.507); */
+    /* border-radius: 7px; */
+    box-shadow: none;
 }
 
 .button:focus {
@@ -965,6 +976,7 @@ span-but{
 .grid {
     border: 2px solid blue;
     width: 100%;
+    text-align: center;
     /* max-width: 1241px; */
 }
 
@@ -989,8 +1001,9 @@ span-but{
   /* position: relative; */
   float: center;
   padding: 2px 2px;
-  width: 32%;
+  width: 33%;
   height: 550px;
+  margin: 0 auto;
 }
 
 .grid-img{
@@ -1002,7 +1015,7 @@ span-but{
 .project-box{
     display: block;
     background: url(img/Apple-Newsletter2.png) no-repeat;
-    background-size: contain; 
+    background-size: cover; 
     width: 100%;
     height: 100%;
     -webkit-transition: all 0.5s ease-in-out;
@@ -1018,7 +1031,7 @@ span-but{
 .project-box2{
     display: block;
     background: url(img/travel-promo3.png) no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     height: 100%;
     -webkit-transition: all 0.5s ease-in-out;
@@ -1034,7 +1047,7 @@ span-but{
 .project-box3{
     display: block;
     background: url(img/nba-email2.png) no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     height: 100%;
     -webkit-transition: all 0.5s ease-in-out;
@@ -1234,6 +1247,126 @@ span-but{
     transition: all .3s ease-in-out;
     opacity: 0;
   }
+
+  /* FOOTER */
+  footer{
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 200px;
+  }
+
+  footer .social-icon, footer .menu{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+  }
+
+  footer .social-icon li, footer .menu li{
+    list-style: none;
+  }
+
+  footer .social-icon li a{
+    font-size: 2em;
+    color: #FFF;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+  }
+
+  footer .social-icon li a:hover{
+    transform: translateY(-10px);
+  }
+
+  footer .menu li a{
+    font-size: 1.2em;
+    color: #FFF;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+  }
+
+  footer .menu li a:hover{
+    opacity: 1;
+  }
+
+  footer p{
+    color: #FFF;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.1em;
+  }
+
+  footer .wave{
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url('img/wave.png');
+    background-size: 1000px 100px;
+  }
+
+  footer .wave#wave1{
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+    animation: animateWave 4s linear infinite;
+  }
+
+  footer .wave#wave2{
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animateWave_02 4s linear infinite;
+  }
+
+  footer .wave#wave3{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+  }
+
+  footer .wave#wave4{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animateWave_02 3s linear infinite;
+  }
+
+  @keyframes animateWave{
+    0%{
+        background-position-x: 1000px;
+    }
+    100%{
+        background-position-x: 0px;
+    }
+  }
+
+  @keyframes animateWave_02{
+    0%{
+        background-position-x: 0px;
+    }
+    100%{
+        background-position-x: 1000px;
+    }
+  }
+
+
+
   
 
 @media screen and (max-width: 1639px) {
@@ -1282,6 +1415,7 @@ span-but{
     }
     .profile-text{
         margin: 0;
+        border: 1px solid black;
     }
     .img-container{
         border: 1px solid black;
@@ -1310,8 +1444,17 @@ span-but{
     .content-area{
         width: 100%;
     }
+
+    .btn{
+        position: relative;
+    }
+
+    .nav-logo{
+        display: none;
+    }
     .navigation{
         width: 100%;
+        margin: 15px;
     }
     .navigation ul li{
         width: 25%;
@@ -1336,6 +1479,14 @@ span-but{
     .navigation ul li:nth-child(4).active ~ .indicator{
         transform: translateX(79vw);
     
+    }
+
+    .watercolor-ctn{
+        margin-left: 200px;
+    }
+
+    .red-paint-bg img{
+        margin-top: 100px;
     }
 
   }
