--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -25,6 +25,31 @@ body{
     padding: 100px 20vw;
 } */
 
+.one{
+font-family: 'Inter';
+font-size: 30px;
+}
+.two{
+font-family: 'Space Grotesk', sans-serif;
+font-size: 30px;
+}
+.three{
+    font-family: 'Work Sans', sans-serif;
+    font-size: 30px;
+
+}
+.four{
+    font-family: 'DM Sans', sans-serif;
+    font-size: 30px;
+}
+.five{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+}
+.six{
+    font-family: 'Jost', sans-serif;
+    font-size: 30px;
+}
 /* ANIMATION CLASSES */ 
 
 .hidden{
@@ -100,7 +125,9 @@ body{
 
 
 .gif-h1{
-    padding-top: 20px;
+    text-align: center;
+    margin: 0;
+    padding-top: 5px;
 }
 
 
@@ -191,14 +218,16 @@ body{
     position: fixed;
     z-index: 1;
     transition: all 0.5s;
-    outline: 1px solid #f1564e;
+    outline: 2px solid #000000; 
+    /* outline: 1px solid #f1564e; */
     /* border-bottom: none; */
     margin-top: 5px;
 }
 
 .icon ion-icon{
     z-index: 10;
-    color: #f1564e;
+    /* color: #f1564e; */
+    color: #000000;
     /* color: #5a8db5;  */
 
 }
@@ -247,8 +276,10 @@ body{
     /* background: #769FCD;  */
     /* linear-gradient(90deg,#0162c8, #55e7fc);  */
 
-    color: #f1564e;
-    border: 1px solid #f1564e;
+    /* color: #f1564e;
+    border: 1px solid #f1564e; */
+    border: 1px solid black;
+    color: #000000;
     padding: 2px 7px;
     border-radius: 12px;
     font-weight: 600;
@@ -293,7 +324,8 @@ body{
     border-radius: 50%;
     z-index: 5; 
     transition: 0.5s;
-    border-bottom: 5px solid #f1564e;
+    /* border-bottom: 5px solid #f1564e; */
+    border-bottom: 5px solid #000000;
 }
 
 .indicator::before{
@@ -449,13 +481,14 @@ body{
 }
 
 .bio-desc3{
-    font-weight: 600;
-    font-size: 20px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
 }
 
-.bio-desc3, .bio-desc4{
+/* .bio-desc3, .bio-desc4{
     font-family: "Open Sans", sans-serif; 
-}
+} */
 
 .about-me-background{
     width: 100%;
@@ -463,7 +496,7 @@ body{
     text-align: center;
     /* width: 1245px;  */
     margin: 0 auto;    
-    overflow: auto;
+    /* overflow: auto; */
     margin-top: 300px;
 }
 
@@ -492,26 +525,28 @@ body{
     overflow: auto;
     margin: 0 auto;
     padding: 30px 0;
-    /* text-align: center; */
-    /* display: flex; */
     opacity: 1;
     height: 400px;
     scroll-snap-type: y mandatory;
-}
-.about-me{
-    scroll-snap-align: start;
-    height: 400px;
+    -ms-overflow-style: none;  
+    /* IE and Edge */
+    scrollbar-width: none;  
+    /* Firefox */
 }
 
 .about-me-ctn::-webkit-scrollbar {
     display: none;
   }
+.about-me{
+    scroll-snap-align: start;
+    height: 400px;
+    /* border: 1px solid black; */
+    padding: 0;
+    margin: 0;
+    /* transform: translateY-(400px); */
+}
+
   
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .about-me-ctn {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
 
 .gif-props{
     text-align: center; 
@@ -540,7 +575,37 @@ body{
     margin: 0 auto;
     margin-top: 10px;
     z-index: 10;
+}
+
+.about-me-text p{
+    background-color: rgba(255, 255, 255, 0.341);
+    /* font-family: 'Space Grotesk, sans-serif'; */
+    font-family: 'Jost', sans-serif;
+    font-size: 17px;
+    /* font-weight: 500; */
+    /* font-family: 'Space Grotesk', sans-serif; */
+    /* font-family: 'Work Sans', sans-serif; */
+    /* font-family: 'DM Sans', sans-serif; */
+    /* font-family: 'Open Sans', sans-serif; */
+}
+
+.about-me-text p span{
+    color: #046a00;
     font-weight: 600;
+
+}
+
+.about-me-text h1{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.about-me-text h3{
+    /* font-family: 'Space Grotesk', sans-serif; */
+    font-family: 'DM Sans', sans-serif;
+    color: #046a00;    /* font-family: 'Work Sans', sans-serif; */
+    /* font-family: 'DM Sans', sans-serif; */
+    /* font-family: 'Open Sans', sans-serif; */
+    /* font-family: 'Jost', sans-serif; */
 }
 
 .personal-details{
@@ -565,16 +630,85 @@ body{
     margin-bottom: 15px;
 }
 
+.personal li p{
+    font-family: 'Jost', sans-serif;
+    font-weight: 600;
+}
+
 .personal-details .personal li h3{
     margin-bottom: 4px;
 }
 
-.personal-details .personal li p{
-    font-weight: 400; 
-}
-
 .personal-details .personal li p, .personal li h3{
     margin: 0;
+}
+
+
+.why-me-ctn{
+    text-align: left;
+    width: 50%;
+    margin: 0 auto;
+    z-index: 10;
+    /* border: 1px solid blue; */
+    /* background-color: rgba(54, 25, 25, .00004); */
+
+
+}
+
+.why-me{
+    padding: 0;
+}
+
+.why-me li{
+    list-style: none;
+    margin-top: 5px;
+    background-color: rgba(255, 255, 255, 0.341);
+    color: #000000;
+    display: flex;
+}
+
+.why-me-text{
+    /* padding: 0 10px;  */
+    padding-right: 10px;
+    width: 25%;
+    text-align: right;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.why-me-text span{
+    color: #670000;
+}
+
+.why-me-text2{
+    width: 75%;
+    font-family: 'Jost', sans-serif;
+    font-size: 15px;
+}
+
+.why-me-text2 span{
+    color: #046a00;
+}
+
+.why-me li span{
+    /* color: #046a00; */
+    font-weight: 600;
+
+}
+
+/* .why-me li .span2{
+    padding-left: 100px;
+} */
+
+
+.second-gif{
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.second-gif img{
+    width: 70%;
 }
 
 
@@ -599,14 +733,10 @@ body{
     cursor: pointer;
     margin: 0 10px 20px 10px;
     padding: 5px;
-    /* border-radius: 2px; */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    /* box-shadow: -15px -15px 15px 
-                rgba(255, 255, 255, 0.2), 
-                15px 15px 15px rgba(0, 0, 0, 0.1); */
-    /* background: linear-gradient(90deg,#f1564e, #55e7fc);  */
-    /* color: #FFFFFF; */
-    /* background: deepskyblue; */
+    /* font-family: 'Inter'; */
+    font-family: 'Work Sans', sans-serif;
+
 }
 
 .profile-but{
@@ -676,6 +806,7 @@ span-but{
 
 .btn-label{
     position: relative;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .btn-paint:nth-child(1){
@@ -730,27 +861,33 @@ span-but{
     }
 }
 
-/* .button:visited {
-    color: blue;
-    box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
-} */
+.button:hover{
+    box-shadow: none; 
+}
 
-.button:hover {
-    /* color: blue; */
-    /* box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.507); */
-    /* border-radius: 7px; */
-    box-shadow: none;
+.button:hover:nth-child(1){
+    color: #046a00;
+}
+.button:hover:nth-child(2){
+    color: purple;
+}
+.button:hover:nth-child(3){
+    color: deepskyblue;
+}
+.button:hover:nth-child(4){
+    color: #f1564e;
 }
 
 .button:focus {
-    color:blue;
+    color: #046a00;
+    box-shadow: none; 
 }
 
 
-/* .button:active {
-    color: blue;
-    box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
-} */
+.button:active {
+    /* color: blue;
+    box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8); */
+}
 
 
 /* ---- button-group ---- */
@@ -826,6 +963,8 @@ span-but{
     text-align: center;
     margin-top: 300px;
     color: #f1564e;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 .skills-ctn{
@@ -974,36 +1113,50 @@ span-but{
 }
 
 .grid {
-    border: 2px solid blue;
     width: 100%;
-    text-align: center;
     /* max-width: 1241px; */
 }
 
 /* clear fix */
-/* .grid:after {
+.grid:after {
   content: '';
   display: block;
   clear: both;
-} */
+}
 
-.grid-item-ctn{
+/* .grid-item-ctn{
     position: absolute;
-    border: 7px solid pink;
     margin: 0 auto;
     text-align: center;
     width: 100%;
     height: 100%;
-}
+} */
 
 /* ---- .element-item ---- */
 .grid-item {
   /* position: relative; */
-  float: center;
-  padding: 2px 2px;
-  width: 33%;
+  /* float: center; */
+  /* padding: 2px 2px; */
+  width: 30%;
   height: 550px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  /* background-color: #046a00; */
+  margin: 0px 20px 10px 20px;
+  padding: 10px;
+}
+
+.news{
+    background-color: purple;
+    border-radius: 10px;
+}
+
+.trans{
+    background-color: deepskyblue;
+    border-radius: 10px;
+}
+.promo{
+    background-color: #f1564e;
+    border-radius: 10px;
 }
 
 .grid-img{
@@ -1020,6 +1173,7 @@ span-but{
     height: 100%;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+    padding: 5px;
 }
 
 .project-box:hover{
@@ -1415,10 +1569,10 @@ span-but{
     }
     .profile-text{
         margin: 0;
-        border: 1px solid black;
+        /* border: 1px solid black; */
     }
     .img-container{
-        border: 1px solid black;
+        /* border: 1px solid black; */
         width: 35%;
         min-width: 270px;
     }
