--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -124,12 +124,6 @@ font-size: 30px;
 /* END ANIMATION CLASSES */ 
 
 
-.gif-h1{
-    text-align: center;
-    margin: 0;
-    padding-top: 5px;
-}
-
 
 .spacer{
     aspect-ratio: 960/400;
@@ -188,6 +182,14 @@ font-size: 30px;
 
 .nav-logo img{
     width: 250px;
+}
+
+/* .profile-text img{
+    display: none;
+} */
+
+.name-profile img{
+    display: none;
 }
 
 
@@ -516,7 +518,6 @@ font-size: 30px;
 
 .about-me-title{
     text-align: center;
-
 }
 
 .about-me-ctn{
@@ -526,7 +527,7 @@ font-size: 30px;
     margin: 0 auto;
     padding: 30px 0;
     opacity: 1;
-    height: 400px;
+    height: 450px;
     scroll-snap-type: y mandatory;
     -ms-overflow-style: none;  
     /* IE and Edge */
@@ -539,10 +540,13 @@ font-size: 30px;
   }
 .about-me{
     scroll-snap-align: start;
-    height: 400px;
+    height: 450px;
     /* border: 1px solid black; */
     padding: 0;
     margin: 0;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     /* transform: translateY-(400px); */
 }
 
@@ -555,12 +559,16 @@ font-size: 30px;
 
 .gif{
     position: relative;
-    width: 30%;
+    /* width: 33%; */
+    /* width: 30%; */
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .gif img{
     width: 100%;
-    height: 100%;
 }
 
 .dunking-gif{
@@ -571,17 +579,19 @@ font-size: 30px;
 
 .about-me-text{
     text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 10px;
+    width: 70%;
+    /* margin: 0 auto; */
+    padding: 3% 10px 0 10px;
     z-index: 10;
+    margin-left: 5%;
+    /* min-width: 450px; */
 }
 
 .about-me-text p{
     background-color: rgba(255, 255, 255, 0.341);
     /* font-family: 'Space Grotesk, sans-serif'; */
     font-family: 'Jost', sans-serif;
-    font-size: 17px;
+    font-size: 1.1rem;
     /* font-weight: 500; */
     /* font-family: 'Space Grotesk', sans-serif; */
     /* font-family: 'Work Sans', sans-serif; */
@@ -589,7 +599,7 @@ font-size: 30px;
     /* font-family: 'Open Sans', sans-serif; */
 }
 
-.about-me-text p span{
+.about-me-text p .green-txt{
     color: #046a00;
     font-weight: 600;
 
@@ -597,6 +607,9 @@ font-size: 30px;
 
 .about-me-text h1{
     font-family: 'Open Sans', sans-serif;
+    /* font-size: 30px; */
+    font-family: 'Work Sans', serif;
+    font-size: 2.5rem;
 }
 
 .about-me-text h3{
@@ -611,6 +624,7 @@ font-size: 30px;
 .personal-details{
     display: flex;
     flex-wrap: wrap;
+    /* padding-left: 50px; */
 }
 
 .personal{
@@ -623,6 +637,10 @@ font-size: 30px;
     /* border: 1px solid black; */
     text-align: left;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .personal li{
@@ -645,18 +663,38 @@ font-size: 30px;
 
 
 .why-me-ctn{
+    /* border: 1px solid green; */
     text-align: left;
-    width: 50%;
-    margin: 0 auto;
+    width: 70%;
+    /* margin: 0 auto; */
+    margin-right: 3%;
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* min-width: 450px; */
+    /* padding: 2% 10px 0 10px; */
     /* border: 1px solid blue; */
     /* background-color: rgba(54, 25, 25, .00004); */
+}
 
+.gif-h1{
+    text-align: center;
+    margin: 0;
+    /* padding-top: 5px; */
+    font-size: 2.2rem;
+    font-family: 'Work Sans', serif;
 
 }
 
 .why-me{
     padding: 0;
+    /* display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center; */
 }
 
 .why-me li{
@@ -665,6 +703,7 @@ font-size: 30px;
     background-color: rgba(255, 255, 255, 0.341);
     color: #000000;
     display: flex;
+    min-width: 500px;
 }
 
 .why-me-text{
@@ -705,10 +744,13 @@ font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* border: 1px solid blue; */
+    width: 350px;
+
 }
 
 .second-gif img{
-    width: 70%;
+    width: 100%;
 }
 
 
@@ -809,6 +851,12 @@ span-but{
     font-family: 'Open Sans', sans-serif;
 }
 
+.btn-label a{
+    text-decoration: inherit;
+    color: inherit;
+    cursor: pointer;
+}
+
 .btn-paint:nth-child(1){
     transform-origin: 50% 0;
     transform: translate(-35px, -20px) rotate(-20deg) scale(1,0);
@@ -865,21 +913,22 @@ span-but{
     box-shadow: none; 
 }
 
-.button:hover:nth-child(1){
+.button:hover:nth-child(1), .button:nth-child(1):focus{
     color: #046a00;
 }
-.button:hover:nth-child(2){
+
+.button:hover:nth-child(2), .button:nth-child(2):focus{
     color: purple;
 }
-.button:hover:nth-child(3){
+
+.button:hover:nth-child(3), .button:nth-child(3):focus{
     color: deepskyblue;
 }
-.button:hover:nth-child(4){
+.button:hover:nth-child(4), .button:nth-child(4):focus{
     color: #f1564e;
 }
 
 .button:focus {
-    color: #046a00;
     box-shadow: none; 
 }
 
@@ -905,6 +954,7 @@ span-but{
     position: absolute;
     margin-left: 900px;
     height: 400px;
+    z-index: 1;
 }
 
 /* .colorful-ctn{
@@ -917,6 +967,7 @@ span-but{
 
 .watercolor-ctn{
     position: relative;
+
 }
 
 .watercolor-ctn img{
@@ -963,7 +1014,9 @@ span-but{
     text-align: center;
     margin-top: 300px;
     color: #f1564e;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', serif;
+    font-size: 2.5rem;
+    z-index: 20;
 
 }
 
@@ -1269,6 +1322,8 @@ span-but{
   .project-title{
     width: 100%;
     color: #f1564e;
+    font-family: 'Work Sans', serif;
+    font-size: 1.3rem;
   }
 
   .project-box .grey-bg .project-info {
@@ -1519,7 +1574,15 @@ span-but{
     }
   }
 
-
+/* @media screen and (max-width: 1363px){
+    .why-me-text{
+        font-size: 15px;
+        border: 2px solid black;
+    }
+    .why-me-text2{
+        font-size: 14px;
+    }
+} */
 
   
 
@@ -1552,9 +1615,9 @@ span-but{
 
 
 @media screen and (max-width: 1040px) {
-    body {
+    /* body {
         background: lightgreen;
-    }
+    } */
     .topWaves.spacer.layer1.bubble{
         width: 100%;
 
@@ -1604,19 +1667,22 @@ span-but{
     }
 
     .nav-logo{
-        display: none;
-    }
-    .navigation{
-        width: 100%;
-        margin: 15px;
-    }
-    .navigation ul li{
-        width: 25%;
+        margin: 10px 0 0 20px;
     }
 
-    .navigation ul li:nth-child(1).active ~ .indicator{
+    .navigation{
+        margin-right: 20px; 
+    }
+    /* .navigation{
+        width: 100%;
+        margin: 15px;
+    } */
+    /* .navigation ul li{
+        width: 25%;
+    } */
+
+    /* .navigation ul li:nth-child(1).active ~ .indicator{
         transform: translateX(8vw);
-        /* transform: translateX(60%); */
     
     }
 
@@ -1633,7 +1699,7 @@ span-but{
     .navigation ul li:nth-child(4).active ~ .indicator{
         transform: translateX(79vw);
     
-    }
+    } */
 
     .watercolor-ctn{
         margin-left: 200px;
@@ -1643,17 +1709,184 @@ span-but{
         margin-top: 100px;
     }
 
+    .maincontainer-ctn{
+        margin: 0 20px;
+    }
+
+    .gif{
+        width: 300px;
+    }
+
+    .gif img{
+        width: 100%;
+    }
+
+    .personal span{
+        display: none;
+    }
+
+    .about-me-text{
+        width: 80%;
+        padding: 20px;
+    }
+
+
+    .about-me-ctn{
+        border: 1px solid purple;
+        width: 100%;
+        height: 500px;
+    }
+
+    .about-me{
+        height: 500px;
+    }
+
+    .second-gif{
+        margin-right: 2%;
+    }
+
   }
 
   @media screen and (max-width: 767px) {
-    body {
+    /* body {
         background: orange;
-    }
+    } */
     .grid-item{
         width: 97%;
     }
     .projectCtn{
         width: 100%;
+    }
+
+    .nav-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .profile-text{
+        width: 100%;
+    }
+
+    .bio-desc1{
+        font-size: 21px;
+    }
+
+    .bio-desc2{
+        font-size: 42px;
+    }
+
+    .bio-desc3{
+        font-size: 18px;
+    }
+
+    .btn{
+        padding: 10px;
+    }
+
+    .btn-label{
+        font-size: 20px;
+        letter-spacing: 3px;
+    }
+
+    .name-profile-ctn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .name-profile img{
+        display: block;
+        width: 60%;
+        min-width: 310px; 
+    }
+
+    .nav-logo{
+        position: absolute;
+        margin: 200px 0 0 0;
+        rotate: 3deg;
+    }
+
+    .skills-header{
+        margin-top: 0;
+    }
+
+    .watercolor-ctn{
+        top: 700px;
+    }
+
+    .watercolor-ctn img{
+        opacity: 0.7;
+    }
+
+    .red-paint-bg{
+        bottom: 100px;
+        right: 60px;
+    }
+
+    .red-paint-bg img{
+        opacity: 0.7;
+    }
+
+    .navigationTrans{
+        margin-top: 80px;
+    } 
+
+    .maincontainer-ctn{
+        /* display: block; */
+        flex-wrap: wrap;
+        z-index: 10;
+
+    }
+
+    .maincontainer{
+        flex: 50%;
+        width: 100%;
+        margin-top: 20px;
+        z-index: 10;
+    }
+
+    .gif{
+        display: none;
+    }
+
+    .about-me-text{
+        width: 100%;
+        padding: 10px;
+        margin: 0;
+    }
+
+    .why-me-ctn{
+        width: 100%;
+        padding: 10px 0;
+        margin: 0;
+    }
+
+    .why-me-text{
+        display: none;
+    }
+
+    .why-me-text2{
+        /* width: 100%; */
+        margin-left: 60px;
+        padding: 5px;
+        
+        /* padding: 0px 20px; */
+    }
+
+    .second-gif{
+        display: none;
+    }
+
+
+    /* .thecard{
+        width: 100%;
+    } */
+
+    .nav-header, .navigationTrans{
+        /* margin: 30px 50px 0 20px; */
+        /* padding: 20px; */
     }
     .navigation ul li:nth-child(1).active ~ .indicator{
         /* transform: translateX(2vw); */
@@ -1700,3 +1933,15 @@ span-but{
     
     }
   } */
+
+  @media screen and (max-width: 405px) {
+    .nav-header, .navigation, .navigationTrans{
+        width: 100%;
+        padding: 0;
+        margin: 5px 0 0 0;
+    }
+
+    .navigationTrans{
+        margin-top: 80px;
+    }
+  }
