--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -36,11 +36,15 @@ font-size: 30px;
 .three{
     font-family: 'Work Sans', sans-serif;
     font-size: 30px;
+    font-weight: 600;
+
 
 }
 .four{
     font-family: 'DM Sans', sans-serif;
     font-size: 30px;
+    font-weight: 600;
+
 }
 .five{
     font-family: 'Open Sans', sans-serif;
@@ -49,8 +53,18 @@ font-size: 30px;
 .six{
     font-family: 'Jost', sans-serif;
     font-size: 30px;
+    font-weight: 600;
 }
 /* ANIMATION CLASSES */ 
+
+[data-aos="rotate-ac"] {
+    transform: rotate(180deg);
+    transition-property: transform;
+  }
+  
+  [data-aos="rotate-ac"].aos-animate {
+    transform: rotate(0deg);
+  }
 
 .hidden{
     opacity: 0;
@@ -224,6 +238,7 @@ font-size: 30px;
     /* outline: 1px solid #f1564e; */
     /* border-bottom: none; */
     margin-top: 5px;
+    margin: 5px 0 0 5px;
 }
 
 .icon ion-icon{
@@ -949,13 +964,12 @@ span-but{
 
 
 
-.orange-paint-bg{
-    /* background: url('img/bluepaint.png'); */
+/* .orange-paint-bg{
     position: absolute;
     margin-left: 900px;
     height: 400px;
     z-index: 1;
-}
+} */
 
 /* .colorful-ctn{
     position: absolute;
@@ -1012,7 +1026,7 @@ span-but{
 
 .skills-title{
     text-align: center;
-    margin-top: 300px;
+    /* margin-top: 300px; */
     color: #f1564e;
     font-family: 'Work Sans', serif;
     font-size: 2.5rem;
@@ -1218,6 +1232,16 @@ span-but{
     /* height: 400px; */
 
 }
+
+.spiral{
+    position: relative;
+}
+
+.spiral img{
+    position: absolute;
+    margin-left: 800px;
+
+}
 .project-box{
     display: block;
     background: url(img-com/Apple-Newsletter2.png) no-repeat;
@@ -1229,10 +1253,21 @@ span-but{
     padding: 5px;
 }
 
-.project-box:hover{
+.project-box1:hover{
     -webkit-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
     -moz-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
     box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+}
+
+.project-box1{
+    display: block;
+    background: url(img-com/myprotein-large.png) no-repeat;
+    background-size: cover; 
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    padding: 5px;
 }
 
 .project-box2{
@@ -1295,6 +1330,12 @@ span-but{
     opacity: 1;
   }
 
+  .project-box1 .grey-bg:hover .project-info .project-details {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+  }
+
   .project-box2 .grey-bg:hover .project-info .project-details {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
@@ -1308,6 +1349,10 @@ span-but{
   }
 
   .project-box .grey-bg:hover .project-info .project-title {
+    opacity: 1;
+  }
+
+  .project-box1 .grey-bg:hover .project-info .project-title {
     opacity: 1;
   }
 
@@ -1326,7 +1371,42 @@ span-but{
     font-size: 1.3rem;
   }
 
+  #project-title1, #project-details1{
+    color: purple;
+  }
+
+  #project-title2, #project-details2{
+    color: deepskyblue;
+  }
+
+  #project-title3, #project-details3{
+    color: #f1564e;
+  }
+
+  #project-title4, #project-details4{
+    color: #f1564e;
+  }
+
+  #project-title5, #project-details5{
+    color: deepskyblue;
+  }
+
+  #project-title6, #project-details6{
+    color: #f1564e;
+  }
+
+  /* .button:hover:nth-child(1), .button:nth-child(1):focus{
+    color: #046a00;
+} */
+
   .project-box .grey-bg .project-info {
+    padding: 56px;
+    position: absolute;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .project-box1 .grey-bg .project-info {
     padding: 56px;
     position: absolute;
     margin-top: 100px;
@@ -1357,7 +1437,10 @@ span-but{
     transform: translate3d(-200px, 0, 0); 
     transition: all .3s ease-in-out;
     opacity: 0;
+    font-weight: 400;
+    /* color: #670000; */
 }
+
 
   
   /* .project-box .grey-bg .project-info .project-details {
@@ -1373,6 +1456,14 @@ span-but{
   } */
   
   .project-box .grey-bg .project-info .project-title {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-left: 7px;
+    opacity: 0;
+  }
+
+  .project-box1 .grey-bg .project-info .project-title {
     font-size: 1.8rem;
     text-transform: uppercase;
     font-weight: 700;
@@ -1405,6 +1496,14 @@ span-but{
 
   }
 
+  .project-box1 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+    color: red;
+
+  }
+
   .project-box2 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
@@ -1422,6 +1521,18 @@ span-but{
   }
 
   .project-box .grey-bg .project-info .fa-long-arrow-alt-right {
+    position: absolute;
+    bottom: 0;
+    right: 56px;
+    font-size: 3rem;
+    -webkit-transform: translate3d(200px, 0, 0);
+            transform: translate3d(200px, 0, 0);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    opacity: 0;
+  }
+
+  .project-box1 .grey-bg .project-info .fa-long-arrow-alt-right {
     position: absolute;
     bottom: 0;
     right: 56px;
@@ -1615,9 +1726,9 @@ span-but{
 
 
 @media screen and (max-width: 1040px) {
-    /* body {
+    body {
         background: lightgreen;
-    } */
+    }
     .topWaves.spacer.layer1.bubble{
         width: 100%;
 
