--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1316,6 +1316,40 @@ span-but{
     box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
 }
 
+.project-box4{
+    /* position: relative; */
+    display: block;
+    background: url(img/business-kit.png) no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.project-box4:hover{
+    -webkit-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+    box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+}
+
+.project-box5{
+    /* position: relative; */
+    display: block;
+    background: url(img/business-kit-sc.png) no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.project-box5:hover{
+    -webkit-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+    box-shadow: 0px 20px 74px 6px rgba(0,0,0,0.12);
+}
+
   .grey-bg{
     background: #efefef;
     position: absolute;
@@ -1362,6 +1396,18 @@ span-but{
     opacity: 1;
   }
 
+  .project-box4 .grey-bg:hover .project-info .project-details {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+  }
+
+  .project-box5 .grey-bg:hover .project-info .project-details {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+  }
+
   .project-box .grey-bg:hover .project-info .project-title {
     opacity: 1;
   }
@@ -1375,6 +1421,14 @@ span-but{
   }
 
   .project-box3 .grey-bg:hover .project-info .project-title {
+    opacity: 1;
+  }
+
+  .project-box4 .grey-bg:hover .project-info .project-title {
+    opacity: 1;
+  }
+
+  .project-box5 .grey-bg:hover .project-info .project-title {
     opacity: 1;
   }
 
@@ -1403,11 +1457,11 @@ span-but{
   }
 
   #project-title5, #project-details5{
-    color: deepskyblue;
+    color: #f1564e;
   }
 
   #project-title6, #project-details6{
-    color: #f1564e;
+    color: purple;
   }
 
   /* .button:hover:nth-child(1), .button:nth-child(1):focus{
@@ -1436,6 +1490,20 @@ span-but{
   }
 
   .project-box3 .grey-bg .project-info {
+    padding: 56px;
+    position: absolute;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .project-box4 .grey-bg .project-info {
+    padding: 56px;
+    position: absolute;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .project-box5 .grey-bg .project-info {
     padding: 56px;
     position: absolute;
     margin-top: 100px;
@@ -1501,6 +1569,22 @@ span-but{
     opacity: 0;
   }
 
+  .project-box4 .grey-bg .project-info .project-title {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-left: 7px;
+    opacity: 0;
+  }
+
+  .project-box5 .grey-bg .project-info .project-title {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-left: 7px;
+    opacity: 0;
+  }
+
 
 .project-box .grey-bg:hover .project-info .fa-long-arrow-alt-right {
     -webkit-transform: translate3d(10px, 0, 0);
@@ -1527,6 +1611,22 @@ span-but{
   }
 
   .project-box3 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+    color: red;
+
+  }
+
+  .project-box4 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+    opacity: 1;
+    color: red;
+
+  }
+
+  .project-box5 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
     opacity: 1;
@@ -1571,6 +1671,30 @@ span-but{
   }
 
   .project-box3 .grey-bg .project-info .fa-long-arrow-alt-right {
+    position: absolute;
+    bottom: 0;
+    right: 56px;
+    font-size: 3rem;
+    -webkit-transform: translate3d(200px, 0, 0);
+            transform: translate3d(200px, 0, 0);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    opacity: 0;
+  }
+
+  .project-box4 .grey-bg .project-info .fa-long-arrow-alt-right {
+    position: absolute;
+    bottom: 0;
+    right: 56px;
+    font-size: 3rem;
+    -webkit-transform: translate3d(200px, 0, 0);
+            transform: translate3d(200px, 0, 0);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    opacity: 0;
+  }
+
+  .project-box5 .grey-bg .project-info .fa-long-arrow-alt-right {
     position: absolute;
     bottom: 0;
     right: 56px;
