--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -153,16 +153,13 @@ font-size: 30px;
 .layer1{
     background-image: url('img/layered-waves-haikei (4).svg');
 }
-.layer2{
-    background-image: url('img/layered-waves-haikei (3).svg');
-}
 
 .bubble::after{
     content: ''; 
-    border-radius: 100% / 0 0 40% 40%;
+    border-radius: 100% / 0 0 30% 30%;
     position: absolute;
     bottom: 0;
-    height: 85%;
+    height: 100%;
     width: 100%;
     background-color: #D6E6F2;
     z-index: -1;
@@ -201,12 +198,46 @@ font-size: 30px;
     width: 250px;
 }
 
-/* .profile-text img{
-    display: none;
-} */
+.profile-text img{
+    /* display: none; */
+}
+
+.intro-ctn{
+    flex: 60%;
+}
+
+.name-profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.name-profile-ctn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 40%;
+}
 
 .name-profile img{
-    display: none;
+    /* display: none; */
+    /* border: 1px solid black; */
+    border-radius: 200px;
+    width: 60%;
+    min-width: 240px;
+    animation: float 2s ease-out infinite;
+}
+
+@keyframes float {
+    50% {
+        transform: translate(0, 20px);
+    }
+}
+
+
+.profile-text{
+    width: 100%;
+    /* border: 1px solid red; */
 }
 
 
@@ -220,7 +251,7 @@ font-size: 30px;
     border-radius: 10px;
     background: #FFFFFF;
     /* position: fixed; */
-    /* z-index: 5; */
+    z-index: 10;
     transition: all 0.5s;
     margin-top: 10px;
 }
@@ -235,7 +266,7 @@ font-size: 30px;
     border-radius: 10px;
     background: transparent;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     transition: all 0.5s;
     outline: 2px solid #000000; 
     /* outline: 1px solid #f1564e; */
@@ -449,12 +480,11 @@ font-size: 30px;
 
 .bubble-content{
     /* border: 5px solid rgb(27, 43, 27); */
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-start; */
     width: 100%;
-    /* padding-top: 250px; */
-    padding-top: 150px;
+    margin-top: 130px;
 }
 
 .profile-text{
@@ -479,12 +509,14 @@ font-size: 30px;
     border-radius: 100px;
 }
 
+.bio-desc1{
+    font-size: 30px;
+    font-weight: 500;
+}
 
 .bio-desc1, .bio-desc2{
     font-family: 'Jost', sans-serif; 
-    font-size: 35px;
     margin: 0;
-    font-weight: 500;
 }
 .bio-desc2{
     font-size: 55px;
@@ -844,7 +876,7 @@ span-but{
     color: #f1564e;
     background-color: transparent;
     text-transform: uppercase;
-    position: absolute; 
+    /* position: absolute;  */
     cursor: pointer;
     overflow: hidden;
     font-weight: 500;
@@ -1021,7 +1053,7 @@ span-but{
 }
 
 .skills-header{
-    margin-top: 890px;
+    margin-top: 500px;
 }
 
 .skills-title{
@@ -1098,6 +1130,7 @@ span-but{
     transition: all 0.5s ease; 
     width: 100%;
     height: 100%;
+    z-index: 1;
     /* border: 1px solid pink; */
 }
 
@@ -1112,14 +1145,18 @@ span-but{
     color: #333;
     border-radius: 15px;
     padding-top: 5px;
+    z-index: 1;
     box-shadow: -15px -15px 15px 
                 rgba(255, 255, 255, 0.2), 
                 15px 15px 15px rgba(0, 0, 0, 0.1);
+    
 }
 
 .thefront img{
     width: 45%;
     text-align: center;
+    z-index: 1;
+
 }
 
 .theback{
@@ -1131,6 +1168,7 @@ span-but{
     backface-visibility: hidden;
     color: #333;
     transform: rotateY(180deg);
+    z-index: 1;
     overflow: hidden;
     padding-top: 5px;
     box-shadow: -15px -15px 15px 
@@ -1144,6 +1182,8 @@ span-but{
     /* display: block; */
     width: 45%;
     text-align: center;
+    z-index: 1;
+
 }
 
 .salesforce-png{
@@ -1872,52 +1912,70 @@ span-but{
     }
 }
 
-/* @media screen and (min-width: 767px) and (max-width: 1040px) {
-    .grid{
-        padding-left: 10px;
-    }
-    .grid-item {
-        width: 46%;
-        margin: 0 10px 10px 10px;
-    }
-} */
-
-@media screen and (min-width: 767px) and (max-width: 1040px) {
-    /* body {
-        background: lightgreen;
+@media screen and (max-width: 1040px) {
+    /* body{
+        background: purple;
     } */
-    .topWaves.spacer.layer1.bubble{
-        width: 100%;
-
-    }
     .bubble-content{
         width: 100%;
-        /* padding-top: 100px; */
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
         text-align: center;
+        margin-top: 30px;
+
     }
+    /* .bubble::after{
+        border-radius: 0;
+    } */
+    .name-profile{
+        flex-direction: column-reverse;
+    }
+    .intro-ctn{
+        margin-top: 30px;
+    }
+    .name-profile-ctn img{
+        width: 30%;
+    }
+    .intro-ctn{
+        width: 100%;
+    }
+    .skills-header{
+        margin-top: 300px;
+    }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1040px) {
+    /* body{
+        background: lightcoral;
+    } */
+    .topWaves.spacer.layer1.bubble{
+        width: 100%;
+    }
+    /* .bubble-content{
+        width: 100%;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 30px;
+
+    }
+    .bubble::after{
+        border-radius: 0;
+    }
+    .name-profile{
+        flex-direction: column-reverse;
+    }
+    .name-profile-ctn img{
+        width: 20%;
+    } */
+
     .profile-text{
         margin: 0;
         /* border: 1px solid black; */
     }
 
-
-    /* .container3D{
-        width: 100vw !important;
-        height: 100vh !important;
-        position: absolute; 
-        top: 0;
-        left: 0;
-    } */
-
-    .bubble::after{
-        border-radius: 0;
-    }
-    /* .watercolor-ctn img{
-        margin-left: 160px;
-    } */
     .red-paint-bg img{
         margin-right: 60px;
     }
@@ -1994,9 +2052,13 @@ span-but{
   }
 
   @media screen and (max-width: 767px) {
+    /* body{
+        background: pink;
+    } */
     /* .bubble::after{
         border-radius: 0;
     } */
+
     .profile-text{
         margin: 0;
         /* border: 1px solid black; */
@@ -2006,12 +2068,15 @@ span-but{
     }
     .bubble-content{
         width: 100%;
-        /* padding-top: 100px; */
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
         text-align: center;
-        padding-top: 150px !important;
+        padding-top: 90px;
+    }
+
+    .name-profile-ctn img{
+        width: 30%;
     }
     .red-paint-bg img{
         margin-right: 60px;
@@ -2020,6 +2085,9 @@ span-but{
         width: 100%;
         overflow-x: hidden;
         overflow-y: hidden;
+    }
+    .skills-header{
+        margin-top: 200px;
     }
 
     /* .navigation{
@@ -2036,6 +2104,7 @@ span-but{
 
     .maincontainer-ctn{
         padding: 0 20px;
+        height: 750px;
     }
 
     .gif{
@@ -2073,15 +2142,6 @@ span-but{
         margin-right: 2%;
     }
 
-
-
-
-    /* body{
-        background: #670000;
-    } */
-    /* .navigation{
-        margin-left: 20px;
-    } */
     .thefront img, .theback img{
         padding: 5px 10px 15px 10px;
     }
@@ -2112,7 +2172,7 @@ span-but{
         width: 100%;
     }
 
-    .bio-desc1{
+    /* .bio-desc1{
         font-size: 21px;
     }
 
@@ -2122,16 +2182,16 @@ span-but{
 
     .bio-desc3{
         font-size: 18px;
-    }
+    } */
 
-    .btn{
+    /* .btn{
         padding: 10px;
-    }
+    } */
 
-    .btn-label{
+    /* .btn-label{
         font-size: 20px;
         letter-spacing: 3px;
-    }
+    } */
 
     .name-profile-ctn{
         display: flex;
@@ -2140,11 +2200,10 @@ span-but{
 
     }
 
-    .name-profile img{
+    /* .name-profile img{
         display: block;
         width: 60%;
-        /* min-width: 23px;  */
-    }
+    } */
 
     .nav-logo{
         position: absolute;
@@ -2152,9 +2211,6 @@ span-but{
         rotate: 3deg;
     }
 
-    .skills-header{
-        margin-top: 0;
-    }
 
     .watercolor-ctn{
         top: 600px;
@@ -2163,7 +2219,7 @@ span-but{
 
     .watercolor-ctn img{
         opacity: 0.7;
-        width: 300px;
+        /* width: 300px; */
     }
 
     .red-paint-bg{
@@ -2173,7 +2229,7 @@ span-but{
 
     .red-paint-bg img{
         opacity: 0.7;
-        width: 200px;
+        /* width: 200px; */
 
     }
 
@@ -2255,12 +2311,12 @@ span-but{
     }
 
     .name-profile-ctn img{
-        width: 50%;
+        width: 40%;
     }
 
-    .skills-title{
+    /* .skills-title{
         margin-top: 200px;
-    }
+    } */
 
     .about-me-background{
         margin-top: 100px;
